// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataTable/> Does not sort when sort is disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class=""
              >
                B
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                A
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                D
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                C
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class=""
            >
              B
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              A
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              D
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              C
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Handles empty rules successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                  <span
                    class="sorting-icons-group"
                  >
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_UP__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 8L6 3 1 8"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_DOWN__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 4L6 9 1 4"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class=""
              >
                B
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                A
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                D
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class=""
              >
                C
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
                <span
                  class="sorting-icons-group"
                >
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_UP__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8L6 3 1 8"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_DOWN__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 4L6 9 1 4"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class=""
            >
              B
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              A
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              D
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class=""
            >
              C
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Renders successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                  <span
                    class="sorting-icons-group"
                  >
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_UP__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 8L6 3 1 8"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_DOWN__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 4L6 9 1 4"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class="some-class"
              >
                B
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                A
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                D
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                C
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
                <span
                  class="sorting-icons-group"
                >
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_UP__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8L6 3 1 8"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_DOWN__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 4L6 9 1 4"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class="some-class"
            >
              B
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              A
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              D
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              C
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Renders successfully without download link and filter when no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <div
          class="no-results-wrapper"
        >
          <span>
            NO RESULTS FOUND
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <div
        class="no-results-wrapper"
      >
        <span>
          NO RESULTS FOUND
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Sorts correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="true"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                  <span
                    class="sorting-icons-group"
                  >
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_UP__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 8L6 3 1 8"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_DOWN__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 4L6 9 1 4"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class="some-class"
              >
                B
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                A
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                D
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                C
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="true"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
                <span
                  class="sorting-icons-group"
                >
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_UP__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8L6 3 1 8"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_DOWN__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 4L6 9 1 4"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class="some-class"
            >
              B
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              A
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              D
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              C
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Sorts numbers correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                  <span
                    class="sorting-icons-group"
                  >
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_UP__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 8L6 3 1 8"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_DOWN__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 4L6 9 1 4"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class="some-class"
              >
                99
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                2010
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                1009
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                99
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
                <span
                  class="sorting-icons-group"
                >
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_UP__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8L6 3 1 8"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_DOWN__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 4L6 9 1 4"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class="some-class"
            >
              99
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              2010
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              1009
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              99
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DataTable/> Sorts percentages correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="data-table__container "
      >
        <h3
          class="data-table__title"
        >
          
          
        </h3>
        <div
          class="Divider settings-divider"
        >
          <div
            class="Divider__heading text-muted"
          >
            <button
              aria-controls="settings-divider"
              aria-expanded="false"
              class="Divider__title"
              id="settings-divider_button"
            >
              <div
                class="Divider__title-layout"
              >
                <div
                  class="Divider__title-left"
                >
                  <div
                    class="Divider__title-row"
                  />
                </div>
                <div
                  class="Divider__title-text"
                >
                  <span
                    aria-level="4"
                    role="heading"
                  >
                    Settings
                  </span>
                </div>
                <div
                  class="Divider__title-right"
                >
                  <div
                    class="Divider__title-row"
                  />
                  <span
                    class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                  >
                    <svg
                      data-id="SVG_CHEVRON_DOWN__16"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6l5 4.6L13 6"
                        fill="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </button>
          </div>
          <div
            aria-labelledby="settings-divider_button"
            class="CollapseBase"
            hidden=""
            id="settings-divider"
            role="region"
            style="max-height: 0px;"
          >
            <div
              class="CollapseBase__content Divider__body"
            >
              <form />
            </div>
          </div>
        </div>
        <table
          aria-label="DataTable"
          class="data-table"
        >
          <thead
            class="data-table-header"
          >
            <tr>
              <th>
                <div
                  class="header-cell"
                >
                  <span>
                    name
                  </span>
                  <span
                    class="sorting-icons-group"
                  >
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_UP__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 8L6 3 1 8"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      aria-hidden="true"
                      class="pointer sorting-icon "
                      role="button"
                      tabindex="0"
                    >
                      <span
                        class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                      >
                        <svg
                          data-id="SVG_CHEVRON_DOWN__12"
                          focusable="false"
                          height="12"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 4L6 9 1 4"
                            fill="none"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </span>
                    </div>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            class="data-table-body"
          >
            <tr>
              <td
                class="some-class"
              >
                1.9%
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                3.99%
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
            <tr>
              <td
                class="some-class"
              >
                20.0%
              </td>
            </tr>
            <tr
              class="expandable-row hidden"
            >
              <td
                class="expandable-column"
                colspan="2"
              />
            </tr>
          </tbody>
        </table>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="data-table__container "
    >
      <h3
        class="data-table__title"
      >
        
        
      </h3>
      <div
        class="Divider settings-divider"
      >
        <div
          class="Divider__heading text-muted"
        >
          <button
            aria-controls="settings-divider"
            aria-expanded="false"
            class="Divider__title"
            id="settings-divider_button"
          >
            <div
              class="Divider__title-layout"
            >
              <div
                class="Divider__title-left"
              >
                <div
                  class="Divider__title-row"
                />
              </div>
              <div
                class="Divider__title-text"
              >
                <span
                  aria-level="4"
                  role="heading"
                >
                  Settings
                </span>
              </div>
              <div
                class="Divider__title-right"
              >
                <div
                  class="Divider__title-row"
                />
                <span
                  class="SVGIcon SVGIcon--16px Divider__SVGIcon Divider__SVGIcon--collapsed"
                >
                  <svg
                    data-id="SVG_CHEVRON_DOWN__16"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6l5 4.6L13 6"
                      fill="none"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          aria-labelledby="settings-divider_button"
          class="CollapseBase"
          hidden=""
          id="settings-divider"
          role="region"
          style="max-height: 0px;"
        >
          <div
            class="CollapseBase__content Divider__body"
          >
            <form />
          </div>
        </div>
      </div>
      <table
        aria-label="DataTable"
        class="data-table"
      >
        <thead
          class="data-table-header"
        >
          <tr>
            <th>
              <div
                class="header-cell"
              >
                <span>
                  name
                </span>
                <span
                  class="sorting-icons-group"
                >
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_UP__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8L6 3 1 8"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    aria-hidden="true"
                    class="pointer sorting-icon "
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="SVGIcon SVGIcon--12px SVGIcon--inline-flex"
                    >
                      <svg
                        data-id="SVG_CHEVRON_DOWN__12"
                        focusable="false"
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 4L6 9 1 4"
                          fill="none"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="data-table-body"
        >
          <tr>
            <td
              class="some-class"
            >
              1.9%
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              3.99%
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
          <tr>
            <td
              class="some-class"
            >
              20.0%
            </td>
          </tr>
          <tr
            class="expandable-row hidden"
          >
            <td
              class="expandable-column"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
